rename package, add handlers for /register and /users
